--- a/thesis/sections/model.tex
+++ b/thesis/sections/model.tex
@@ -8,180 +8,7 @@
 \label{sec:ifc-model}
 
 % TODO: reference to introduction of Ferraiuolo17 paper
-
-% 1. Introduce Ferraiuolo17 type system rules (only relevant ones)
-% 2. Transform lattice transitions to two independent labelings with sup and inf operation
-% 3. Introduce defaults
-% 4. Translate transitions
-
-% TODO: ensure that this introduction is free of redundancies
-In \cite{Ferraiuolo17} the authors introduce an extension to the \gls{hdl} SecVerilog in form of a type system that implements static information flow control forming the new language SecVerilogBL.
-They evaluated their approach by successfully finding some known bugs in the Arm architecture.
-% TODO: evaluate their results more strongly and compare them to mine
-Their approach includes two key ideas:
-\begin{enumerate}
-    % TODO: "that annotate information" is too broad
-    \item A lattice of security labels that annotate information
-    \item A type system that allows them to statically track information through Verilog code
-\end{enumerate}
-In short, the security labels represent the semantics of pieces of information while the type system rules define how information moves through the \gls{hdl} code.
-In this section, we will apply these two ideas to an \gls{isa}.
-We will apply the ideas of the type system developed in \cite{Ferraiuolo17} to the semantics of the instructions specified by the \gls{isa} of MINRV8 by giving information flow semantics on a per-instruction basis.
-This transformation is necessary because in our practical scenario, we cannot rely on the same computational power as a static type checker can.
-In our implementation, we will need to realize the information flow control via state-system-transition rules expressed in propositional logic.
-
-\cite{Ferraiuolo17} introduces four information flow labels $ \Sigma = \{ \PT, \PU, \CT, \CU \} $ which stand for public/trusted, public/untrusted, confidential/trusted and confidential/untrusted.
-As you can see, each of these four labels comprises two tokens from two domains of information flow control.
-The first of these domains is the one of \textit{confidentiality} - each of the labels states that a piece of information is either public (\P{}) or confidential (\C{}).
-The second of these domains is the one of \textit{integrity}, i.e. are the values we deal with integrous or - in other words - not malicious?
-Each of the labels states that a piece of information is either trusted (\T{}) or untrusted (\U{}).
-
-These labels have a partial order defined $ \preceq $ on them which induces a supremum $ \sqcup $ and an infimum $ \sqcap $ operator on $ \Sigma $.
-This partial order is depicted in figure \ref{fig:sec-lattice} as a hasse diagram.
-The intuition behind the ordering is that information is always allowed to flow up in the hasse diagram while it is not allowed to flown down.
-
-\begin{example}
-    Remember, that this lattice was defined with a type system in mind.
-    For information to flow up in this context is best illustrated with the following code snippet\footnote{%
-        The syntax of this snippet is \textit{not} SecVerilogBL.%
-    }:
-    \begin{lstlisting}
-        int a : PT = 0;
-        int b : PU = a;
-    \end{lstlisting}
-
-    In this example, first a variable called \asl{a} is initialized and labelled with \PT{}.
-    Then, the value of \asl{a} is assigned to another newly initialized variable labelled with \PU{}.
-    This flow of information would be permitted by the lattice $ (\Sigma, \sqcup, \sqcap) $ as information that is labelled with \PT{} flows to a destination that is labelled with \PU{} which is $ \preceq $-greater than \PT{}.
-
-    However, if this flow of information was to occur the other way round, it would have been prohibited.
-\end{example}
-
-\begin{figure}
-    \centering
-    \begin{tikzpicture}
-        \begin{scope}
-            \node (pt) {\PT};
-            \node[above right=of pt] (ct) {\CT}
-                edge (pt);
-            \node[above left=of pt] (pu) {\PU}
-                edge (pt);
-            \node[above right=of pu] (cu) {\CU}
-                edge (ct)
-                edge (pu);
-        \end{scope}
-    \end{tikzpicture}
-    \caption{Security lattice for SecVerilogBL \cite{Ferraiuolo17}}
-    \label{fig:sec-lattice}
-\end{figure}
-
-% TODO: Do I need a reference for the sequent calculus?
-Of course, there are more complex operations in SecVerilogBL than simply assigning values to variables.
-In reaction to that, the authors of \cite{Ferraiuolo17} introduce type system rules to define how information flows throughout the system, i.e. how operations generate new security labelings in the form of types.
-Type system rules are written like proofs of sequent calculus.
-
-\begin{example}
-    Consider this example of a proof written in sequent calculus:
-    \begin{prooftree}
-        \AxiomC{$ A $}
-        \AxiomC{$ B $}
-        \BinaryInfC{$ C $}
-    \end{prooftree}
-
-    This proof states that the formula $ C $ can be derived from the formulas $ A $ and $ B $ or more formally that: $ A, B \vdash C $.
-\end{example}
-
-In the context of type systems, formulas used in proofs of sequent calculus often are so called \textcquote{Ferraiuolo17}{typing judgements} where some \textit{environment} types some \textit{expression}, e.g. if $ X $ is a type environment, $ x $ an expression and $ \tau $ a type one possible typing judgement would be $ X \vdash x : \tau $ which means that $ x $ is of type $ \tau $ under the environment $ X $.
-The authors of \cite{Ferraiuolo17} introduce three environments:
-
-\begin{description}
-    \item[Standard environment] $ \Gamma $ maps variables to their respective security labeling type, i.e. a function mapping \texttt{int}s as bit indices to security labels (more on this later).
-    % TODO: Why must there be a width environment? Introduce how HDLs look like at the beginning of this passage
-    \item[Width environment] $ \W $ maps variables to their respective bit vector length.
-    \item[Kind environment] $ \Theta $ allows the lifting of security labels to functions mapping bit indices to security labels and can make type judgements of the form $ \Theta \vdash \tau : \texttt{int} \rightarrow l $ where $ l $ is the type of the security labels and $ \tau $ is a type mapped to by $ \Gamma $.
-\end{description}
-
-You can find an overview of those type system rules of \cite{Ferraiuolo17} which are relevant to us in figure \ref{fig:type-rules}.
-The most simple type system rule probably is T-Const which types constant expressions $ n $.
-% TODO: reflect on why it is sensible to assume that constants are trusted in their scenario but not in ours
-These are always of type $ \bot $, i.e. \PT, and of the corresponding width $ w $.
-The other type system rules share a pattern.
-They assume one or two expressions ($ e $ or $ e_1 $ and $ e_2 $) to be typed in $ \Gamma; \W; \Theta $ and ensure that their corresponding types ($ \tau $ or $ \tau_1 $ and $ \tau_2 $) are of the right kind in $ \Theta $.
-Then, they create a new type ($ \tau $ or $ \tau' $) and infer a type judgement for a new expression involving $ e $, $ e_1 $ or $ e_2 $ and maybe some constant $ n $.
-This structure of type system rules follows the pattern of an inductive proof or inductive definition of a set where T-Const is the start of induction.
-
-\begin{figure}
-    \centering
-    \begin{subfigure}[t]{.5\linewidth}
-        \begin{prooftree}
-            \AxiomC{}
-            \UnaryInfC{$ \Gamma; \W; \Theta \vdash n: \bot, w $}
-        \end{prooftree}
-        \caption{T-Const}
-    \end{subfigure}
-
-    \begin{subfigure}[t]{.5\linewidth}
-        \begin{prooftree}
-            \alwaysNoLine
-            \AxiomC{$ \Gamma; \W; \Theta \vdash e_1 : \tau_1, w $}
-            \UnaryInfC{$ \Theta \vdash \tau_1 : \texttt{int} \rightarrow l $}
-
-            \AxiomC{$ \Gamma; \W; \Theta \vdash e_2 : \tau_2, w $}
-            \UnaryInfC{$ \Theta \vdash \tau_2 : \texttt{int} \rightarrow l $}
-
-            \BinaryInfC{$ \tau = i \mapsto \tau_1( i) \sqcup \tau_2(i) $}
-
-            \singleLine
-            \UnaryInfC{$ \Gamma; \W; \Theta \vdash e_1 \circ e_2 : \tau, w $}
-        \end{prooftree}
-        \caption{T-Logical for $ \circ \in \{ \land, \lor \} $}
-    \end{subfigure}
-
-    \begin{subfigure}[t]{.5\linewidth}
-        \begin{prooftree}
-            \alwaysNoLine
-            \AxiomC{$ \Gamma; \W; \Theta \vdash e_1 : \tau_1, w $}
-            \UnaryInfC{$ \Theta \vdash \tau_1 : \texttt{int} \rightarrow l $}
-
-            \AxiomC{$ \Gamma; \W; \Theta \vdash e_1 : \tau_2, w $}
-            \UnaryInfC{$ \Theta \vdash \tau_2 : \texttt{int} \rightarrow l $}
-
-            \BinaryInfC{$ \tau = i \mapsto \bigsqcup_{j \in [1, i]} (\tau_1(j) \sqcup \tau_2(j)) $}
-
-            \singleLine
-            \UnaryInfC{$ \Gamma; \W; \Theta \vdash e_1 \circ e_2 : \tau, w $}
-        \end{prooftree}
-        \caption{T-Arith for $ \circ \in \{ +, - \} $}
-    \end{subfigure}
-
-    \begin{subfigure}[t]{.5\linewidth}
-        \begin{prooftree}
-            \alwaysNoLine
-            \AxiomC{$ \Gamma; \W; \Theta \vdash e : \tau, w $}
-            \AxiomC{$ \Theta \vdash \tau : \texttt{int} \rightarrow l $}
-            \BinaryInfC{$ \tau' = i \mapsto \ite{(i < n)}{\tau(i - n + 1)}{\bot} $}
-
-            \singleLine
-            \UnaryInfC{$ \Gamma; \W; \Theta \vdash e \ll n : \tau', w $}
-        \end{prooftree}
-        \caption{T-LShift}
-    \end{subfigure}
-
-    \begin{subfigure}[t]{.5\linewidth}
-        \begin{prooftree}
-            \alwaysNoLine
-            \AxiomC{$ \Gamma; \W; \Theta \vdash e : \tau, w $}
-            \AxiomC{$ \Theta \vdash \tau : \texttt{int} \rightarrow l $}
-            \BinaryInfC{$ \tau' = i \mapsto \ite{(i > w - n)}{\bot}{\tau(i + n)} $}
-
-            \singleLine
-            \UnaryInfC{$ \Gamma; \W; \Theta \vdash e \gg n : \tau', w $}
-        \end{prooftree}
-        \caption{T-RShift}
-    \end{subfigure}
-    \caption{A selection of typing rules for SecVerilogBL expressions \cite{Ferraiuolo17}}
-    \label{fig:type-rules}
-\end{figure}
+% TODO: compare removed parts to introduction
 
 In order to apply these type system rules to instructions, the idea behind each rule will be investigated next to generate information flow semantics for instructions from those.
 An interpretation function $ \I $ is introduced that maps each instruction to its information flow semantics.
