--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -86,6 +86,10 @@
     name={\textsc{SecVerilog}},
     description={},
 }
+\newglossaryentry{secverilogbl}{
+    name={\textsc{SecVerilogBL}},
+    description={},
+}
 \newglossaryentry{trustzone}{
     name={\gls{arm} \textsc{TrustZone}},
     description={},
